<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/twoPlayerModeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentOptions.TwoPlayerMode">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/playerInputTwoPlayerModeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326">

        <TextView
            android:id="@+id/playerheadtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/HeadlinePlayerOne_txt"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/enternametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/black"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="10"
            android:fontFamily="@font/fredoka_one"
            android:hint="@string/edittxthint_txt"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="@android:color/black" />

        <Button
            android:id="@+id/start1v1gameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_shape"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/addplayer_txt" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
